test/errors/unknown_escape.sg
' Test unknown escape sequence
(def test "hello\xworld")